--- a/index.html
+++ b/index.html
@@ -9,54 +9,68 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link href="Style/style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" type="image/x-icon" href="Assets/Logos/logo.png">
-  <script type='text/javascript'>
-  window.smartlook||(function(d) {
-    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
-    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-    c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
-    })(document);
-    smartlook('init', '4a88dc7c386ff5502adc974f5b85f57cbdd22663', { region: 'eu' });
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Y1VK8138T"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7Y1VK8138T');
-</script>
-
-</script>
   <title>Denger Scripts</title>
 </head>
 
 <body onload="LoaderStart()">
+
   <script src="Scripts/Script.js"></script>
-  <center class='whatthefuck'>
+
+
+
+  <center class='Loader-Wrapper'>
     <div id="loader"></div>
   <center>
+
+
+
   <div style="display:none;" id="myDiv" class="animate-bottom">
+
+
+
   <!-- start of navigation bar -->
   <div id="navbar-wrapper">
+
+
+
     <!--logo-->
     <button onclick="YoutubeChannelOpenLink()" id="navbar-logo">
       <img src="Assets/Logos/logo.png" />
     </button>
     <!--logo-->
+
+
+
     <!--title-->
     <h1 id="navbar-header">Denger Scripts</h1>
     <!--title-->
+
+
+    <div id="navbar-cluster">
+      <button id="Navbar-Button" onclick="openNavbar()">
+        <img src="Assets/Logos/Menu.png">
+      </button>
+    </div>
+
     <!--buttons-->
     <div id="navbar-buttons">
       <a class="active">Home</a>
       <a href="Scripts.html">Scripts</a>
       <a class="youtube"href="https://www.youtube.com/@Denger", target="_blank">Youtube</a>
       <a href="https://discord.gg/BWHm3yG7X4" target="_blank">Discord</a>
-      <a href="#about">About</a>
     </div>
     <!--buttons-->
+
+
   </div>
   <!-- end of navigation bar -->
+
+
+
+
+
+
+
   <div class="main-grid-container">
     
   <div class="main-item1">
